...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/create_tracking">

        <LinearLayout
...

            <TextView
                android:id="@+id/tvTrackingStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etTrackingStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvTrackingStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etTrackingStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvTrackingEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etTrackingEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvTrackingEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etTrackingEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvLabelTrackingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etTrackingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnCreateTrackingSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnCreateTrackingBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
